crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_24_type_error_for_plus_mentions_strings.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: nil + 42;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (expr (+ nil 42.0)))
[0mλ» [1m[0m
----- stderr -----
Error: type error in binary operator `+`: lhs has type `Nil`, but rhs has type `Number`
   ╭─[<input>:1:1]
   │
 1 │ nil + 42;
   │ ─┬─ ┬ ─┬  
   │  │  │  ╰── this is of type `Number`
   │  │  │     
   │  │  ╰───── the operator in question
   │  │        
   │  ╰──────── this is of type `Nil`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
